Add media query to make text larger

--- a/form.html
+++ b/form.html
@@ -1,6 +1,12 @@
 <html>
     <head>
 <style>
+
+@media screen and {max-width: 500px} {
+    body {
+        font-size: 2em;
+    }
+}
 body {
     padding: 1em;
     font-family: Helvetica;
@@ -14,7 +20,7 @@ textarea {
 }
 
 textarea {
-    width: 50%;
+    width: 100%;
     min-width: 400px;
     max-width: 1000px;
 }
