Start improving mobile view

--- a/form.html
+++ b/form.html
@@ -2,16 +2,6 @@
     <head>
 <style>
 
-@media screen and {max-width: 500px} {
-    body {
-        font-size: 2em;
-    }
-}
-body {
-    padding: 1em;
-    font-family: Helvetica;
-}
-
 button,
 textarea {
     padding: 0.25em;
@@ -19,10 +9,15 @@ textarea {
     font-size: 1.5em;
 }
 
+button {
+    background-color: #1bc0ff;
+    border: none;
+    box-shadow: 4px 3px 10px 0px rgba(0,0,0,0.5);
+}
+
+button,
 textarea {
     width: 100%;
-    min-width: 400px;
-    max-width: 1000px;
 }
 
 </style>
