--- a/form.html
+++ b/form.html
@@ -15,6 +15,11 @@ button {
     box-shadow: 4px 3px 10px 0px rgba(0,0,0,0.5);
 }
 
+#output {
+    font-size: 1.5em;
+    padding: 0.25em;
+}
+
 button,
 textarea {
     width: 100%;
