--- a/form.html
+++ b/form.html
@@ -2,11 +2,15 @@
     <head>
 <style>
 
+body {
+    font-size: 1.5em;
+    font-family: Helvetica;
+}
+
 button,
 textarea {
     padding: 0.25em;
     margin: 0.25em;
-    font-size: 1.5em;
 }
 
 button {
@@ -17,6 +21,15 @@ button {
 
 #output {
     font-size: 1.5em;
+    padding: 0.25em;
+}
+
+table {
+    border-collapse: collapse;
+}
+
+td {
+    border: 1px solid #ccc;
     padding: 0.25em;
 }
 
@@ -34,10 +47,10 @@ textarea {
             <table>
                 <thead>
                     <tr>
-                        <td>Negative %</td>
-                        <td>Neutral %</td>
-                        <td>Positive %</td>
-                        <td>Compound Score</td>
+                        <th>Negative %</th>
+                        <th>Neutral %</th>
+                        <th>Positive %</th>
+                        <th>Compound Score</th>
                     </tr>
                 </thead>
                 <tbody>
