Add placeholder for table

--- a/form.html
+++ b/form.html
@@ -57,10 +57,10 @@ textarea {
                 </thead>
                 <tbody>
                     <tr>
-                        <td id="neg-score"></td>
-                        <td id="neu-score"></td>
-                        <td id="pos-score"></td>
-                        <td id="compound-score"></td>
+                        <td id="neg-score">-</td>
+                        <td id="neu-score">-</td>
+                        <td id="pos-score">-</td>
+                        <td id="compound-score">-</td>
                     </tr>
                 </tbody>
             </table>
