Add first stab at Part of Speech detection

--- a/form.html
+++ b/form.html
@@ -45,7 +45,7 @@ textarea {
     </head>
     <body>
         <textarea id="input"></textarea><br/>
-        <button id="submitButton">Check Sentiment</button>
+        <button id="sentimentButton">Check Sentiment</button>
         <div id="output">
             <table>
                 <thead>
@@ -66,10 +66,24 @@ textarea {
                 </tbody>
             </table>
         </div>
+        <button id="posButton">Tag Parts of Speech</button>
+        <div>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Word</th>
+                        <th>Part of Speech</th>
+                    </tr>
+                </thead>
+                <tbody id="posOutput">
+                </tbody>
+            </table>
+        </div>
+        <button id="eneButton">Extract Named Entities</button>
     <script>
 var output = document.getElementById("output")
 var input = document.getElementById("input")
-var button = document.getElementById("submitButton")
+var button = document.getElementById("sentimentButton")
 button.onclick = function(e) {
     var xhr = new XMLHttpRequest();
     xhr.open('POST', '/api/polarity')
@@ -88,6 +102,34 @@ button.onclick = function(e) {
     xhr.setRequestHeader("Content-Type", "application/json")
     xhr.send(JSON.stringify({content: input.value}))
 }
+
+var posButton = document.getElementById("posButton")
+posButton.onclick = function(e) {
+    var output = document.getElementById("posOutput")
+    var xhr = new XMLHttpRequest();
+    xhr.open('POST', '/api/pos')
+    xhr.onload = function() {
+        obj = {}
+        try {
+            obj = JSON.parse(xhr.responseText)
+        } catch (e) {
+            output.innerHTML = xhr.responseText
+        }
+        for (var i in obj) {
+            var tr = document.createElement("tr")
+            var td = document.createElement("td")
+            td.innerText = obj[i][0]
+            tr.appendChild(td)
+            td = document.createElement("td")
+            td.innerText = obj[i][1]
+            tr.appendChild(td)
+            output.appendChild(tr)
+        }
+    }
+    xhr.setRequestHeader("Content-Type", "application/json")
+    xhr.send(JSON.stringify({content: input.value}))
+}
+
     </script>
     </body>
 </html>
