Actually use the lookup'd value...

--- a/form.html
+++ b/form.html
@@ -181,7 +181,7 @@ posButton.onclick = function(e) {
             tr.appendChild(td)
             td = document.createElement("td")
             partOfSpeech = PartOfSpeechLookup[partOfSpeechAbbrev]
-            td.innerText = partOfSpeechAbbrev
+            td.innerText = partOfSpeech
             tr.appendChild(td)
 
             output.appendChild(tr)
